src/test/ui/generic/generic-type-params-forward-mention.stderr
error[E0128]: type parameters with a default cannot use forward declared identifiers
  --> $DIR/generic-type-params-forward-mention.rs:2:23
   |
LL | struct Foo<T = Option<U>, U = bool>(T, U);
   |                       ^ defaulted type parameters cannot be forward declared

error: aborting due to previous error

For more information about this error, try `rustc --explain E0128`.
